feat: new product properties
